--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>I was born in a rainy town in Atok, Benguet wherein i finished my kindergarten until elementary but after a few years me and my family moved to Baguio City to continue my studies in secondary.  </p>
+                    <p>I was born in a rainy town in Atok, Benguet wherein i finished my kindergarten until elementary but after a few years me and my family moved to Baguio City to continue my studies in secondary.<br> <img src="img/portfolio/Atok_Benguet.png">  </p>
                 </div>
                 <div class="col-lg-4">
                     <p>During my High school days, there are many things that come to mind. Some of them are: good memories, bad memories, mistakes, lessons, happiness, heartbreak, misfortune, joy, drama, and most importantly, fun. High School to me seemed like it past by really fast, almost too fast sometimes. I learned many valuable life lessons as well as made life long friends. I learned the value of hard work, dedication, and also how to tell your real friends from the others. </p>
