--- a/index.html
+++ b/index.html
@@ -304,10 +304,10 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>My Resume</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/resume.png" class="img-responsive img-centered" alt="">
-                            <p> The icon above contains my resume </p>
+                         
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
